Added @Router for getProductBySku
